# claude_app

./: .gitignore  LICENSE  dev.sh  global_chats.md  potential_upgrades.md  sample.md
backend/: Cargo.toml
backend/src/: claude.rs  fs.rs  main.rs  pty.rs  state.rs  transcribe.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: Conversation.svelte  CsvViewer.svelte  ImageViewer.svelte  MarkdownEditor.svelte  MarkdownView.svelte  MiniTerminal.svelte  NoteReader.svelte  NotesPanel.svelte  PathPicker.svelte  Sidebar.svelte  SlashMenu.svelte  StlViewer.svelte  VoiceInput.svelte  commands.ts  filetypes.ts  highlighter.ts  markdown.ts  stores.svelte.ts  ws.ts
frontend/src/routes/: +page.svelte
