[package]
name = "claude_app_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
dashmap = "6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
